[package]
name = "ezmid"
version = "0.0.0"
authors = ["carrotflakes <carrotflakes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midly = { version = "0.5", default-features = false, features = ["alloc"] }
